# wordcount

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: char.rs  lines.rs
